chore: update to spec
