# src/params.ts
@@ -1,3 +1,3 @@
 // This file was auto-generated by @insertish/oapi!
-export const pathResolve = {"1":[["regions"]],"2":[["streams",""],["streams","@me"],["streams",["{path}"]],["streams","reset_token"],["users","@me"],["users",["{path}"]],["users","bans"],["categories","create"],["categories",["{id}"]],["categories",""],["admin","invites"]],"3":[["streams",["{path}"],"bans"],["streams",["{target}"],"follow"],["chat",["{target}"],"messages"],["admin","invites",["{code}"]],["admin","streams",["{stream_id}"]],["admin","users",["{user_id}"]],["auth","account","create"],["auth","account","reverify"],["auth","account","delete"],["auth","account",""],["auth","account","disable"],["auth","account","reset_password"],["auth","session","login"],["auth","session","logout"],["auth","session","all"],["auth","session",["{id}"]],["auth","mfa","ticket"],["auth","mfa",""],["auth","mfa","recovery"],["auth","mfa","methods"],["auth","mfa","totp"]],"4":[["streams",["{stream_id}"],"bans",["{user_id}"]],["streams",["{target}"],"bans",["{id}"]],["streams",["{stream_id}"],"mods",["{user_id}"]],["chat",["{target}"],"messages",["{id}"]],["admin","streams",["{stream_id}"],"stop"],["auth","account","change","password"],["auth","account","change","email"],["auth","account","verify",["{code}"]]]};
-export const queryParams = {"/regions":{"get":[]},"/streams/":{"get":[],"put":[]},"/streams/@me":{"get":[],"patch":[]},"/streams/{path}":{"get":[]},"/streams/{path}/bans":{"get":[]},"/streams/reset_token":{"post":[]},"/streams/{stream_id}/bans/{user_id}":{"put":[]},"/streams/{target}/bans/{id}":{"delete":[]},"/streams/{target}/follow":{"put":[],"delete":[]},"/streams/{stream_id}/mods/{user_id}":{"put":[],"delete":[]},"/users/@me":{"get":[],"put":[],"patch":[]},"/users/{path}":{"get":[]},"/users/bans":{"get":[]},"/categories/create":{"post":[]},"/categories/{id}":{"delete":[],"patch":[]},"/categories/":{"get":[]},"/chat/{target}/messages":{"get":[],"post":[]},"/chat/{target}/messages/{id}":{"delete":[]},"/admin/invites":{"get":[],"post":[]},"/admin/invites/{code}":{"delete":[]},"/admin/streams/{stream_id}":{"patch":[]},"/admin/users/{user_id}":{"patch":[]},"/admin/streams/{stream_id}/stop":{"post":[]},"/auth/account/create":{"post":[]},"/auth/account/reverify":{"post":[]},"/auth/account/delete":{"put":[],"post":[]},"/auth/account/":{"get":[]},"/auth/account/disable":{"post":[]},"/auth/account/change/password":{"patch":[]},"/auth/account/change/email":{"patch":[]},"/auth/account/verify/{code}":{"post":[]},"/auth/account/reset_password":{"post":[],"patch":[]},"/auth/session/login":{"post":[]},"/auth/session/logout":{"post":[]},"/auth/session/all":{"get":[],"delete":["revoke_self"]},"/auth/session/{id}":{"delete":[],"patch":[]},"/auth/mfa/ticket":{"put":[]},"/auth/mfa/":{"get":[]},"/auth/mfa/recovery":{"post":[],"patch":[]},"/auth/mfa/methods":{"get":[]},"/auth/mfa/totp":{"put":[],"post":[],"delete":[]}};
+export const pathResolve = {"1":[["regions"]],"2":[["streams",""],["streams","@me"],["streams",["{path}"]],["streams","reset_token"],["users","@me"],["users",["{path}"]],["users","bans"],["categories","create"],["categories",["{id}"]],["categories",""],["admin","invites"],["admin","livestreams"]],"3":[["streams",["{path}"],"bans"],["streams",["{target}"],"follow"],["chat",["{target}"],"messages"],["admin","invites",["{code}"]],["admin","streams",["{stream_id}"]],["admin","users",["{user_id}"]],["auth","account","create"],["auth","account","reverify"],["auth","account","delete"],["auth","account",""],["auth","account","disable"],["auth","account","reset_password"],["auth","session","login"],["auth","session","logout"],["auth","session","all"],["auth","session",["{id}"]],["auth","mfa","ticket"],["auth","mfa",""],["auth","mfa","recovery"],["auth","mfa","methods"],["auth","mfa","totp"]],"4":[["streams",["{stream_id}"],"bans",["{user_id}"]],["streams",["{target}"],"bans",["{id}"]],["streams",["{stream_id}"],"mods",["{user_id}"]],["chat",["{target}"],"messages",["{id}"]],["admin","streams",["{stream_id}"],"stop"],["auth","account","change","password"],["auth","account","change","email"],["auth","account","verify",["{code}"]]]};
+export const queryParams = {"/regions":{"get":[]},"/streams/":{"get":[],"put":[]},"/streams/@me":{"get":[],"patch":[]},"/streams/{path}":{"get":[]},"/streams/{path}/bans":{"get":[]},"/streams/reset_token":{"post":[]},"/streams/{stream_id}/bans/{user_id}":{"put":[]},"/streams/{target}/bans/{id}":{"delete":[]},"/streams/{target}/follow":{"put":[],"delete":[]},"/streams/{stream_id}/mods/{user_id}":{"put":[],"delete":[]},"/users/@me":{"get":[],"put":[],"patch":[]},"/users/{path}":{"get":[]},"/users/bans":{"get":[]},"/categories/create":{"post":[]},"/categories/{id}":{"delete":[],"patch":[]},"/categories/":{"get":[]},"/chat/{target}/messages":{"get":[],"post":[]},"/chat/{target}/messages/{id}":{"delete":[]},"/admin/invites":{"get":[],"post":[]},"/admin/invites/{code}":{"delete":[]},"/admin/streams/{stream_id}":{"patch":[]},"/admin/users/{user_id}":{"patch":[]},"/admin/livestreams":{"get":[]},"/admin/streams/{stream_id}/stop":{"post":[]},"/auth/account/create":{"post":[]},"/auth/account/reverify":{"post":[]},"/auth/account/delete":{"put":[],"post":[]},"/auth/account/":{"get":[]},"/auth/account/disable":{"post":[]},"/auth/account/change/password":{"patch":[]},"/auth/account/change/email":{"patch":[]},"/auth/account/verify/{code}":{"post":[]},"/auth/account/reset_password":{"post":[],"patch":[]},"/auth/session/login":{"post":[]},"/auth/session/logout":{"post":[]},"/auth/session/all":{"get":[],"delete":["revoke_self"]},"/auth/session/{id}":{"delete":[],"patch":[]},"/auth/mfa/ticket":{"put":[]},"/auth/mfa/":{"get":[]},"/auth/mfa/recovery":{"post":[],"patch":[]},"/auth/mfa/methods":{"get":[]},"/auth/mfa/totp":{"put":[],"post":[],"delete":[]}};
