# src/routes.ts
@@ -49,6 +49,7 @@ export type APIRoutes =
 | { method: 'patch', path: '-/admin/streams/{stream_id}', parts: 3, params: paths['/admin/streams/{stream_id}']['patch']['requestBody']['content']['application/json'], response: paths['/admin/streams/{stream_id}']['patch']['responses']['200']['content']['application/json'] }
 | { method: 'patch', path: `/admin/users/${string}`, parts: 3, params: paths['/admin/users/{user_id}']['patch']['requestBody']['content']['application/json'], response: paths['/admin/users/{user_id}']['patch']['responses']['200']['content']['application/json'] }
 | { method: 'patch', path: '-/admin/users/{user_id}', parts: 3, params: paths['/admin/users/{user_id}']['patch']['requestBody']['content']['application/json'], response: paths['/admin/users/{user_id}']['patch']['responses']['200']['content']['application/json'] }
+| { method: 'get', path: `/admin/livestreams`, parts: 2, params: undefined, response: paths['/admin/livestreams']['get']['responses']['200']['content']['application/json'] }
 | { method: 'post', path: `/admin/streams/${string}/stop`, parts: 4, params: undefined, response: paths['/admin/streams/{stream_id}/stop']['post']['responses']['200']['content']['application/json'] }
 | { method: 'post', path: '-/admin/streams/{stream_id}/stop', parts: 4, params: undefined, response: paths['/admin/streams/{stream_id}/stop']['post']['responses']['200']['content']['application/json'] }
 | { method: 'post', path: `/auth/account/create`, parts: 3, params: paths['/auth/account/create']['post']['requestBody']['content']['application/json'], response: undefined }
